--- a/style.css
+++ b/style.css
@@ -205,3 +205,12 @@ noindex {
     left: calc(var(--size) * 1.45);
     top: calc(var(--size) * 1.7);
 }
+
+#canvas {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
